ll_src_dir = $(top_srcdir)/src/

bin_PROGRAMS = bmp280_base
bmp280_base_CPPFLAGS = -I$(ll_src_dir)
bmp280_base_SOURCES = basic.c bmp280.c bmp280.h bmp280_defs.h $(ll_src_dir)/arg_parser.c $(ll_src_dir)/arg_parser.h $(ll_src_dir)/i2c_ll.c $(ll_src_dir)/i2c_ll.h $(ll_src_dir)/i2c_e2p.c \
$(ll_src_dir)/e2p_i2c.h   